--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,18 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId> <artifactId>commons-text</artifactId> <version>1.9</version>
+        </dependency>
+
+
+
+</dependencies>
 
     <build>
         <plugins>
