--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <version>5.5.13.3</version>
         </dependency>
         <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>18</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId> <artifactId>commons-text</artifactId> <version>1.9</version>
         </dependency>
 </dependencies>
